<resources>
    <string name="app_name">MovieTickets</string>
    <string name="lo__1">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signup">signUp</string>
    <string name="signUp1">signUp</string>
    <string name="name">name</string>
    <string name="mail">e_mail</string>
    <string name="p_w">Password</string>
    <string name="s_up">SignUp</string>
    <string name="get_start">Embrace Cinematic Anytime Anywhere</string>
    <string name="start1">Discover the power of movies with ABY Cinema. Book, and experience films like never before let the magic unfold.</string>
    <string name="started">Get Started</string>
    <string name="home">LION KING</string>
    <string name="lionking">The Lion King</string>
    <string name="lionking1">Synopsis</string>
    <string name="text">This Disney animated feature follows the adventures of the young lion Simba (Jonathan Taylor Thomas), the heir of his father, Mufasa (James Earl Jones). Simba\'s wicked uncle, Scar (Jeremy Irons), plots to usurp Mufasa\'s throne by luring father and son into a stampede of wildebeests. But Simba escapes, and only Mufasa is killed. Simba returns as an adult (Matthew Broderick) to take back his homeland from Scar with the help of his friends Timon (Nathan Lane) and Pumbaa (Ernie Sabella).</string>
    <string name="date">Select Date and Time</string>
    <string name="Thu">Tue - 21</string>
    <string name="wed">Wed - 22</string>
    <string name="thu">Thu - 23</string>
    <string name="fri">Fri - 24</string>
    <string name="time_3">3:00 pm</string>
    <string name="time_4">4:00 pm</string>
    <string name="time_5">5:00 pm</string>
    <string name="time_6">6:00 pm</string>
    <string name="time_7">7:00 pm</string>
    <string name="time_8">8:00 pm</string>
    <string name="Book_now">Book Now</string>
    <string name="Thankyou">Thank You!</string>
    <string name="enjoy">Enjoy the movie with your Friends and Families</string>
    <string name="choose">Choose Movie</string>
    <string name="play">Now Playing</string>
    <string name="Ruthiran">Ruthiran</string>
    <string name="Lion">Lion King</string>
    <string name="dora">Dora</string>
    <string name="movie">Coming Movie</string>
    <string name="journey">Journey</string>
    <string name="Mojin">Mojin</string>
    <string name="Raya">Raya</string>
    <string name="Summery">Order Summery</string>
    <string name="L1">Lion King</string>
    <string name="L_1">The Lion King</string>
    <string name="A1">Adventure</string>
    <string name="C1">One Galle Face Mall</string>
    <string name="date_1">Wed, 15 March 2024, 15:00</string>
    <string name="orderid">Order ID</string>
    <string name="orderid1">"Order ID : "</string>
    <string name="id">78888796534</string>
    <string name="pack1">Package :       Standard</string>
    <string name="Seats1">Seat(s) : D5, D6, D7</string>
    <string name="Rseats">Regular Seat : 1200 x3</string>
    <string name="total1">Total Cost : Rs.3600.00</string>
    <string name="order1">Confirm Order</string>
</resources>