<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Home">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="154dp"
        android:layout_height="193dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/lionking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <ScrollView
        android:layout_width="216dp"
        android:layout_height="204dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <TextView
            android:id="@+id/textdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/text" />
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="402dp"
        android:layout_height="78dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdate1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button

                android:layout_width="149dp"
                android:layout_height="75dp"
                android:text="@string/Thu"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="199dp" />

            <Button

                android:layout_width="149dp"
                android:layout_height="75dp"
                android:text="@string/wed"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="199dp" />

            <Button

                android:layout_width="149dp"
                android:layout_height="75dp"
                android:text="@string/thu"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="199dp" />

            <Button

                android:layout_width="149dp"
                android:layout_height="75dp"
                android:text="@string/fri"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="199dp" />


        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="427dp"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_4"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_5"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_6"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_7"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_8"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


    </HorizontalScrollView>

    <TextView
        android:id="@+id/textdate1"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:layout_marginTop="60dp"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/text"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/lionking1"
        android:textColor="#A64D1C"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/book_bg"
        android:text="@string/Book_now"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="337dp"
        android:layout_height="72dp"
        android:text="@string/lionking"
        android:textAlignment="center"
        android:textColor="#E85303"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />


</androidx.constraintlayout.widget.ConstraintLayout>