<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="116dp"
      android:layout_height="104dp"
      android:src="@drawable/logo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.461"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.086" />

  <EditText
      android:id="@+id/edit_name"
      android:layout_width="347dp"
      android:layout_height="52dp"
      android:layout_marginTop="28dp"
      android:background="@drawable/edt_background"
      android:hint="@string/name"
      android:paddingLeft="13dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <EditText
      android:id="@+id/edit_email"
      android:layout_width="347dp"
      android:layout_height="52dp"
      android:layout_marginTop="28dp"
      android:background="@drawable/edt_background"
      android:hint="@string/mail"
      android:paddingLeft="13dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_name" />


  <EditText
      android:id="@+id/edit_password"
      android:layout_width="347dp"
      android:layout_height="52dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/edt_background"
      android:hint="@string/p_w"
      android:paddingLeft="13dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_email" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:text="@string/signUp1"
      android:textAlignment="center"
      android:textColor="#000000"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <Button
      android:id="@+id/btnSignUp"
      android:layout_width="266dp"
      android:layout_height="50dp"
      android:layout_marginTop="60dp"
      android:background="@drawable/b_bg"
      android:text="@string/s_up"
      android:textColor="#FFFFFF"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_password" />


</androidx.constraintlayout.widget.ConstraintLayout>